Hide scrollbar and fix website text out of div

--- a/trip/static/trip/css/container_blocks.css
+++ b/trip/static/trip/css/container_blocks.css
@@ -16,12 +16,31 @@
     word-wrap:break-word;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .bg-translucent {
     /* Backfround color */
     background-color: rgba(209, 213, 219, 0.35);
 
     /* Shadow */
     box-shadow: 2px 5px 10px rgb(0 0 0 / 0.1);
+}
+
+.limit-text {
+    display: block;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .fade {
